[wmfme] video displayed in incorrect place and size
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox122 | --- | fixed |
People
(Reporter: alwu, Assigned: alwu)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
When testing Netflix with MFCDM, I found that Netflix changes video resolution very frequently, and sometime the video would be displayed in incorrect place in a wrong size for a second, then back to normal.
After some debugging, I think the issue is caused by this. Whenever we detect video resolution change, we call IMFMediaEngineEx::UpdateVideoStream
to assigns a new display position and recreate a new dcomp handle, which seems unnecessary.
Assignee | ||
Comment 1•1 year ago
|
||
We should only use one dcomp handle which can fit for all different size
of videos, and the media engine seems already knowing the size of the
new video size, which is why the engine dispatches
MF_MEDIA_ENGINE_EVENT_FORMATCHANGE
to us.
Therefore, we don't need to call UpdateVideoStream
when the video size
change, but we still need to notify resize
to media element, which
will be implemented in bug 1867634.
Comment 3•1 year ago
|
||
bugherder |
Description
•