Bug 1867626 - do not create dcomp surface handle and no need to update new size to media engine. r=jolin

We should only use one dcomp handle which can fit for all different size
of videos, and the media engine seems already knowing the size of the
new video size, which is why the engine dispatches
`MF_MEDIA_ENGINE_EVENT_FORMATCHANGE` to us.


Therefore, we don't need to call `UpdateVideoStream` when the video size
change, but we still need to notify `resize` to media element, which
will be implemented in bug 1867634.

Differential Revision: https://phabricator.services.mozilla.com/D195156